Changelog
=========


1.3.3 (unreleased)
------------------

- Fix getAttendeesOrUsers index, so that it indexes users of all fields.
  [jone]

- Fix encoding problem in meeting latex view.
  [jone]


1.3.2 (2012-04-23)
------------------

- Export ICS: show attendees.
  [Julian Infanger]

- Show location in meeting view.
  [Julian Infanger]

- Added zcml-condition for ICSAttachmentCreator adapter.
  [Julian Infanger]


1.3.1 (2012-03-26)
------------------

- Fix attendees listing (show userid if user is no longer available).
  [mathias.leimgruber]


1.3 (2012-03-19)
----------------

- Add events listing for ftw.workspace details PDF.
  [jone]

- Responsibles name of a meetingitem is now displayed, even if its a contact.
  [Julian Infanger]


1.2.11 (2012-03-12)
-------------------

- Replaced td with table-label class with th.
  [julian]

- Update German and English translations.
  [jone]

- Implement meeting PDF with `ftw.pdfgenerator`.
  [jone]


1.2.10 (2012-03-05)
-------------------

- Added Ical Attachment adapter.
  [mathias.leimgruber]

- Added drag'n'drop support for meetingitems on meeting view.
  [mathias.leimgruber]

- Improve visual effects on meeting view.
  [jone]

- Added class vertical and listing to the tables.
  [Julian Infanger]

- Added functions to get and edit start and end date like default event.
  These functions are needed in the calendar.
  [Julian Infanger]

- Added new arrow_down/arrow_right icon
  [mathias.leimgruber]


1.2.9 (2011-12-21)
------------------

- Updates in meeting pdf.
  Show logo in pdf. Show location in pdf. Show start date and start time as date.
  Add head of meeting, attendees and recording secretary.
  Use enumerate to show traktanden. Added url to related items in traktanden.
  [Julian Infanger]

- Related Items in Traktanden are now listed and linked.
  [jinfanger]


1.2.8 (2011-09-06)
------------------

- added task-list
  [jinfanger]


1.2.5 (2011-04-01)
------------------
