@@ -14,19 +14,23 @@ class ExportICS(CalendarView):
             voc = self.context.getAttendeesVocabulary()
             value = ''
             for attendee in attendees:
-                value+='ATTENDEE;CN="%s";CUTYPE=INDIVIDUAL:%s\n' % (
-                    voc.getValue(attendee['contact']).decode('utf8'),
+                # getValue returns None if user does not exists
+                info = voc.getValue(attendee['contact'])
+                if not info:
+                    continue
+                value += 'ATTENDEE;CN="%s";CUTYPE=INDIVIDUAL:%s\n' % (
+                    info.decode('utf8'),
                     attendee['contact'])
             return value.encode('utf8')
         return ''
 
-
     @ram.cache(cachekey)
     def feeddata(self):
-        context = self.context
         data = cs.ICS_HEADER % dict(prodid=cs.PRODID)
-        data += 'X-WR-CALNAME:%s\n' % context.Title()
-        data += 'X-WR-CALDESC:%s\n' % context.Description()
+        # Enabling two lines below results in always creating
+        # new calendars in outlook
+        # data += 'X-WR-CALNAME:%s\n' % self.context.Title()
+        # data += 'X-WR-CALDESC:%s\n' % self.context.Description()
         for brain in self.events:
             lines = brain.getObject().getICal().split('\n')
             lines.insert(1, self.attendees(brain))
