@@ -5,6 +5,12 @@ Changelog
 1.3.3 (unreleased)
 ------------------
 
+- Fix generating ical data if user doesn't exists
+  [mathias.leimgruber]
+
+- Try to prevend Outlook from always creating new calendars
+  [mathias.leimgruber]
+
 - Fix getAttendeesOrUsers index, so that it indexes users of all fields.
   [jone]
 
